--- a/_quarto.yml
+++ b/_quarto.yml
@@ -14,6 +14,8 @@ website:
         text: Research
       - href: cv.qmd
         text: CV
+      - href: teaching.qmd
+        text: Teaching
       - icon: envelope
         href: mailto:cbj4@rice.edu
       - text: "{{< fa brands bluesky>}}"
